# sitegen

./: .coveragerc  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
docs/: CHANGELOG.md  index.rst  site.yaml
docs/architecture/: index.rst
docs/architecture/docgen/: index.md
src/pagekey_docgen/: cli.py  config.py  core.py
src/pagekey_docgen/templates/: conf.py  index.rst
src/pagekey_sitegen/: cli.py  config.py  core.py  generator.py
src/pagekey_sitegen/templates/next/: package.json  test.txt
test/: test_cli.py  test_config.py  test_core.py  test_generator.py
test/integration/: README.md
test/integration/docs/: index.md  index.rst  site.yaml
test/integration/docs/subsystem/: index.md
test/integration/my_code/: code.py
test/integration/next/: index.mdx  site.yaml
test/integration/next/lib/: Layout.tsx
test/integration/next/src/lib/: TestComponent.tsx
test/integration/next/src/pages/: about.tsx  index.mdx
test/integration/sphinx/docs/: index.rst  site.yaml
