[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pagekey-docgen"
version = "0.1.0"
description = "Generate documentation sites for PageKey projects."
authors = ["Steve G. <pagekeysolutions@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = ">= 8.0.0"

[tool.poetry.scripts]
pagekey-docgen = "pagekey_docgen.cli:main"
